--- a/themes/perplex/assets/css/screen.post.css
+++ b/themes/perplex/assets/css/screen.post.css
@@ -451,14 +451,6 @@ html {
   font-family: 'IBM Plex Serif', Georgia, Times, serif;
   font-weight: 450;
   font-style: normal;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
-@media screen and (min-width: 79em) {
-  html {
-    overflow: hidden;
-  }
 }
 
 body {
@@ -468,11 +460,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-feature-settings: "liga" on, "clig" on, "dlig" off;
   scroll-behaviour: smooth;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+@media screen and (min-width: 79em) {
+  body {
+    overflow: hidden;
+  }
 }
 
 .l-page {
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   padding: 7rem 0 0 0rem;
   padding: 7rem 0 0 var(--pmv);
 }
@@ -602,7 +602,6 @@ body {
   position: relative;
   z-index: 1;
   height: 100%;
-  overflow: hidden;
 }
 
 @media screen and (min-width: 79em) {
@@ -757,9 +756,12 @@ body {
   }
 }
 
+.l-box {
+  width: 100%;
+}
+
 @media screen and (min-width: 48em) {
   .l-box {
-    height: 100%;
     width: 111rem;
   }
 }
